# rustspace

./: README.md
rustspace/: Cargo.toml
rustspace/assets/: community.css  error.css  form.css  friends.css  post.css  posts.css  profile.css  site.css  user.css
rustspace/migrations/: 001_create_users.sql  002_create_profiles.sql  003_add_column_for_avatars.sql  004_add_friendships.sql  005_add_column_for_cancelling_friendship.sql  006_add_column_for_blog_posts.sql  007_add_comments.sql
rustspace/src/: db.rs  main.rs  security.rs  template.rs  validation.rs
rustspace/src/router/: comment.rs  community.rs  friendships.rs  mod.rs  post.rs  profile.rs
rustspace/src/template/: mod.rs
rustspace/src/test/: mod.rs  test_auth.rs  test_comment.rs  test_community.rs  test_friendships.rs  test_post.rs  test_profile.rs  (+2 more)
rustspace/templates/: about.html  avatar-form.html  avatar-result.html  base.html  comment-add-result.html  comment-form.html  comments-result.html  community.html  community_result.html  db-error.html  deleted-comment.html  email-field.html  email-form.html  errors.html  friend-requests-result.html  friend-requests.html  friends-result.html  friends.html  help.html  index.html  invited-button.html  login.html  new-posts.html  password-field.html  password-form.html  password-validation.html  post-edit-form.html  post-error.html  post-form.html  post.html  posts-result.html  posts.html  profile-form.html  profile.html  profile_error.html  profile_field.html  register.html  rejected-requests-result.html  rejected-requests.html  request-result.html  (+3 more)
(+3 files in other folders)
